# client/swagger.json
@@ -512,6 +512,14 @@
 							"format": "int32",
 							"nullable": true
 						}
+					},
+					{
+						"name": "search",
+						"in": "query",
+						"schema": {
+							"type": "string",
+							"nullable": true
+						}
 					}
 				],
 				"responses": {
